<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controller.LoginActivity"
        android:id="@+id/login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_login"
            android:textSize="28dp"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="@color/md_theme_light_onPrimary"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            android:background="@color/md_theme_light_onPrimary"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_botao_login"
            android:textSize="18dp"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:padding="15dp"
            android:backgroundTint="@color/md_theme_light_primary"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/txt_irCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_tela_cadastro"
            android:textSize="16dp"
            android:textColor="@color/md_theme_light_onPrimaryContainer"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
